--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.28)
-project(CMakeSFMLProject LANGUAGES CXX)
+cmake_minimum_required(VERSION 3.25)
+project(Chess LANGUAGES CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
@@ -13,9 +13,13 @@ FetchContent_Declare(SFML
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(main src/main.cpp)
-target_link_libraries(main PRIVATE sfml-graphics)
-target_compile_features(main PRIVATE cxx_std_17)
+set(CMAKE_CXX_STANDARD 17) 
+
+file(GLOB src_files "src/*.cpp" "src/*.hpp")
+
+add_executable(Chess ${src_files})
+target_link_libraries(Chess PRIVATE sfml-graphics sfml-system sfml-window)
+target_compile_features(Chess PRIVATE cxx_std_17)
 
 if(WIN32)
     add_custom_command(
